--- a/html/index.html
+++ b/html/index.html
@@ -145,19 +145,19 @@
                         <p>Portfolio using HTML CSS JS</p>
                     </div>
                     <div class="proj">
-                        <img src="/img/esp.png">
+                        <img src="../img/esp.png">
                         <p>Mini Web server using ESP8266</p>
                     </div>
                     <div class="proj">
-                        <img src="/img/iot.png" alt="">
+                        <img src="../img/iot.png" alt="">
                         <p>Security in IP based IoT node and device authentication</p>
                     </div>
                     <div class="proj">
-                        <img src="/img/resume.png" alt="">
+                        <img src="../img/resume.png" alt="">
                         <p>E-Resume</p>
                     </div>
                     <div class="proj">
-                        <img src="/img/phantom.png" alt="">
+                        <img src="../img/phantom.png" alt="">
                         <p>Project on phantom loading</p>
                     </div>
                 </div>
